--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
   "manifest_version": 2,
   "name": "GA Swappy",
-  "version": "1.0",
+  "version": "0.1",
 
   "browser_action": {
     "default_title": "Swappy",
+     "default_icon": {
+        "38": "static/img/logo.png"
+    },
     "default_popup": "static/index.html"
   },
-
+  "icons": { "128": "static/img/logo_128.png" },
   "options_page": "static/options.html",
   "permissions": [
     "storage"
